--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 <body style="background-color: rgb(12, 161, 161);">
     <h1>Welcome</h1>
     <img src="lucybanner.png" alt="Image" height="400px" width="1200px">
-    <p>Hi I am Lucy </p>
+    <p>Hi I am Lucy
+        I am a vtuber who just wants to entertain.
+        
+        <a href="https://www.twitch.tv/lucythedragon25">My Twitch</a>
+    </p>
        <textarea placeholder="Kindly Provide Your Feedback"></textarea>
         <br>
         <button>Click Me</button>
