--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         I am a vtuber who just wants to entertain.
         
         <a href="https://www.twitch.tv/lucythedragon25">My Twitch</a>
+        <br>
+        I also make fun videos and animations on Youtube
+        <a href="https://www.youtube.com/@LucyTheDragon25">My Youtube Channel</a>
     </p>
        <textarea placeholder="Kindly Provide Your Feedback"></textarea>
         <br>
