--- a/index.html
+++ b/index.html
@@ -15,11 +15,8 @@
         <br>
         I also make fun videos and animations on Youtube
         <a href="https://www.youtube.com/@LucyTheDragon25">My Youtube Channel</a>
+        <br>
+        <a href="https://lucythedragon25.github.io/Website/new">Fun Stuff</a>
     </p>
-       <textarea placeholder="Kindly Provide Your Feedback"></textarea>
-        <br>
-        <button>Click Me</button>
-        <br>
-        
 </body>
 </html>
