--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My HTML Site</title>
+    <title>LucyTheDragon</title>
 </head>
 <body style="background-color: rgb(12, 161, 161);">
     <h1>Welcome</h1>
@@ -16,7 +16,7 @@
         I also make fun videos and animations on Youtube
         <a href="https://www.youtube.com/@LucyTheDragon25">My Youtube Channel</a>
         <br>
-        <a href="https://lucythedragon25.github.io/Website/new">Fun Stuff</a>
+        <a href="https://lucythedragon25.github.io/Website/new">About Me</a>
     </p>
 </body>
 </html>
