--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         I also make fun videos and animations on Youtube
         <a href="https://www.youtube.com/@LucyTheDragon25">My Youtube Channel</a>
         <br>
-        <a href="https://lucythedragon25.github.io/Website/new">About Me</a>
+        <a href="https://lucythedragon25.github.io/Website/AboutMe">About Me</a>
     </p>
 </body>
 </html>
