--- a/AboutMe.html
+++ b/AboutMe.html
@@ -9,7 +9,7 @@
     <img src="lucybanner1.png" alt="Image" height="240px" width="600px">
     <h1>About Me</h1>
     <p>
-        
+        Hi I'm Lucy I am a vtuber. I have been a vtuber for About a year.
     </p>
 </body>
 </html>
