--- a/AboutMe.html
+++ b/AboutMe.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
+    <link rel="website icon" type="png" href="vts-2024-08-26_12h03_37.png">
 </head>
 <body style="background-color: rgb(12, 161, 161);">
     <img src="lucybanner1.png" alt="Image" height="240px" width="600px">
