--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LucyTheDragon</title>
+    <link rel="website icon" type="png" href="vts-2024-08-26_12h03_37.png">
 </head>
 <body style="background-color: rgb(12, 161, 161);">
     <h1>Welcome</h1>
