--- a/index.html
+++ b/index.html
@@ -62,8 +62,11 @@
         
         <a href="https://www.twitch.tv/lucythedragon25">My Twitch</a>
         <br>
-        I also make fun videos and animations on Youtube
+        I also make fun videos and animations on Youtube.
         <a href="https://www.youtube.com/@LucyTheDragon25">My Youtube Channel</a>
+        <br>
+        I also have a patreon if you want to support me.
+        <a href="patreon.com/LucyTheDragon">Right Here</a> 
     </p>
 </body>
 </html>
