--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <a href="https://www.youtube.com/@LucyTheDragon25">My Youtube Channel</a>
         <br>
         I also have a patreon if you want to support me.
-        <a href="patreon.com/LucyTheDragon">Right Here</a> 
+        <a href="https://www.patreon.com/LucyTheDragon">Right Here</a> 
     </p>
 </body>
 </html>
