--- a/index.html
+++ b/index.html
@@ -58,15 +58,18 @@
     "
 
         >Hi I am Lucy
-        I am a vtuber who just wants to entertain.
-        
+        I am a vtuber who just wants to entertain.| 
         <a href="https://www.twitch.tv/lucythedragon25">My Twitch</a>
+        |
         <br>
-        I also make fun videos and animations on Youtube.
+        I also make fun videos and animations on Youtube.|
         <a href="https://www.youtube.com/@LucyTheDragon25">My Youtube Channel</a>
+        |
         <br>
-        I also have a patreon if you want to support me.
+        I also have a patreon if you want to support me.|
         <a href="https://www.patreon.com/LucyTheDragon">Right Here</a> 
+        | Twitch Artwork was all made by |
+        <a href="https://www.twitch.tv/rayndy">Rayndy</a>|
     </p>
 </body>
 </html>
