--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
         I also have a patreon if you want to support me.|
         <a href="https://www.patreon.com/LucyTheDragon">Right Here</a> 
         | Twitch Artwork was all made by |
-        <a href="https://www.twitch.tv/rayndy">Rayndy</a>|
+        <a href="https://www.twitch.tv/rayndy">Rayndy</a>
+        |
     </p>
 </body>
 </html>
